exports[`describeModule should describe a createClass component 1`] = `
"import React from \'react\';
import renderer from \'react-test-renderer\';

describe(\'CreateClass\', () => {
  it(\'exists\', () => {
    expect(CreateClass).toBeTruthy();
  });

  it(\'renders\', () => {
    const comp = <CreateClass  />;
    const tree = renderer.create(comp).toJSON();
    expect(tree).toMatchSnapshot();
  });
});"
`;

exports[`describeModule should describe a stateless function component 1`] = `
"import React from \'react\';
import renderer from \'react-test-renderer\';

describe(\'StatelessFunction\', () => {
  it(\'exists\', () => {
    expect(StatelessFunction).toBeTruthy();
  });

  it(\'renders\', () => {
    const comp = <StatelessFunction  />;
    const tree = renderer.create(comp).toJSON();
    expect(tree).toMatchSnapshot();
  });
});"
`;

exports[`describeModule should describe an ES6 component 1`] = `
"import React from \'react\';
import renderer from \'react-test-renderer\';

describe(\'SafeComponent\', () => {
  it(\'exists\', () => {
    expect(SafeComponent).toBeTruthy();
  });

  it(\'renders\', () => {
    const comp = <SafeComponent  />;
    const tree = renderer.create(comp).toJSON();
    expect(tree).toMatchSnapshot();
  });
});"
`;

exports[`describeModule should describe an ES6 with Flow component 1`] = `
"import React from \'react\';
import renderer from \'react-test-renderer\';

describe(\'FlowComponent\', () => {
  it(\'exists\', () => {
    expect(FlowComponent).toBeTruthy();
  });

  it(\'renders\', () => {
    const comp = <FlowComponent label=\"mockstring\" />;
    const tree = renderer.create(comp).toJSON();
    expect(tree).toMatchSnapshot();
  });
});"
`;

exports[`describeModule should describe an unsafe ES6 component 1`] = `
"import React from \'react\';
import renderer from \'react-test-renderer\';

describe(\'UnsafeComponent\', () => {
  it(\'exists\', () => {
    expect(UnsafeComponent).toBeTruthy();
  });

  xit(\'renders\', () => {
    const comp = <UnsafeComponent foo=\"TODO mock\" />;
    const tree = renderer.create(comp).toJSON();
    expect(tree).toMatchSnapshot();
  });
});"
`;

exports[`describeModule should describe simple exports 1`] = `
"describe(\'esExports\', () => {
  it(\'exists\', () => {
    expect(esExports).toBeTruthy();
  });
});
describe(\'refConst\', () => {
  it(\'exists\', () => {
    expect(refConst).toBeTruthy();
  });
});
describe(\'refFunc\', () => {
  it(\'exists\', () => {
    expect(refFunc).toBeTruthy();
  });
});
describe(\'inlineConst\', () => {
  it(\'exists\', () => {
    expect(inlineConst).toBeTruthy();
  });
});
describe(\'inlineFunc\', () => {
  it(\'exists\', () => {
    expect(inlineFunc).toBeTruthy();
  });
});"
`;
